--- a/professores/templates/professores/entrega_avaliar.html
+++ b/professores/templates/professores/entrega_avaliar.html
@@ -113,7 +113,9 @@
           {% lng "(enviada para estudante)" "(will be sent to student)" %}:
         {% endif %}
       </label><br>
-      <textarea id="observacoes_estudantes" name="observacoes_estudantes" rows="8" cols="100" maxlength="2048">{{observacao.observacoes_estudantes}}</textarea>
+      <textarea id="observacoes_estudantes" name="observacoes_estudantes" 
+       {% if not editor %}disabled{% endif %}
+       rows="8" cols="100" maxlength="2048">{{observacao.observacoes_estudantes}}</textarea>
       <br><br>
 
       {% comment %} Observações somente para leitura de orientador/coordenador {% endcomment %}
@@ -121,7 +123,9 @@
              title="Insira qualquer observação que achar relavante. O texto será encaminhado para os orientadores do projeto.">
         {% lng "<b>Observações Orientador/Coordenação</b> (para documentar/anotar ou enviar coordenação)" "<b>Evaluation Observations</b> (to document/note or send coordinator)" %}:
       </label><br>
-      <textarea id="observacoes_orientador" name="observacoes_orientador" rows="8" cols="100" maxlength="2048">{{observacao.observacoes_orientador}}</textarea>
+      <textarea id="observacoes_orientador" name="observacoes_orientador" 
+       {% if not editor %}disabled{% endif %}
+       rows="8" cols="100" maxlength="2048">{{observacao.observacoes_orientador}}</textarea>
       <br><br>
       
       {% if evento.startDate.date > today.date %}
@@ -137,10 +141,12 @@
         </div><br>
       {% endif %}
 
-      <button class="btn btn-primary mb-1" type="submit" style="margin-right: 1em;">{% lng "Gravar Avaliação" "Save Evaluation" %}</button>
-      <label for="envia"><input type="checkbox" id="envia" name="envia" style="margin-right: 4px;" {% if user.professor.email_avaliacao %}checked{% endif %}>
-        {% lng "Enviar e-mail nesse instante com resultados para estudante(s)" "Send email in this instant with results to student(s)" %}
-      </label>
+      {% if editor %}
+        <button class="btn btn-primary mb-1" type="submit" style="margin-right: 1em;">{% lng "Gravar Avaliação" "Save Evaluation" %}</button>
+        <label for="envia"><input type="checkbox" id="envia" name="envia" style="margin-right: 4px;" {% if user.professor.email_avaliacao %}checked{% endif %}>
+          {% lng "Enviar e-mail nesse instante com resultados para estudante(s)" "Send email in this instant with results to student(s)" %}
+        </label>
+      {% endif %}
       <p>&nbsp;</p>
 
     </form>
