ajustando avaliação Única

--- a/professores/templates/professores/informe_bancas.html
+++ b/professores/templates/professores/informe_bancas.html
@@ -13,7 +13,7 @@
 
 {% block content %}
 
-  {% lng "Enviar mensagem para orientadores com suas bancas e as avaliações já realizadas." "Send message to advisors with their boards and evaluations already held." %}"
+  {% lng "Enviar mensagem para orientadores com suas bancas e as avaliações já realizadas." "Send message to advisors with their boards and evaluations already held." %}
   <br>
   
   <form method="post" id="informe_bancas" enctype="multipart/form-data">{% csrf_token %}
