--- a/professores/templates/professores/resultado_projetos.html
+++ b/professores/templates/professores/resultado_projetos.html
@@ -164,17 +164,16 @@
 
                     {% with coorientadores=projeto.coorientador_set.all %}
                       {% if coorientadores %}
-                      <span class="coorientadores">
-                      <br>
-                      {% lng "Coorientação" "Co-advising" %}:
-                        {% for coorientador in coorientadores %}
-                            <a class="imprimir" href="{% url 'user_detail' coorientador.usuario.id %}">
-                              {{coorientador.usuario.get_full_name}} 
-                            </a>
-                            {% comment %} <a class="email" href="mailto:{{coorientador.usuario.email}}">&lt;{{coorientador.usuario.email}}&gt;</a> {% endcomment %}
-                            {% if not forloop.last %}; {% endif %}
-                        {% endfor %}
-                        </span>
+                        <div class="coorientadores ml-2">
+                          {% lng "Coorientação" "Co-advising" %}:
+                          {% for coorientador in coorientadores %}
+                              <a class="imprimir" href="{% url 'user_detail' coorientador.usuario.id %}">
+                                {{coorientador.usuario.get_full_name}} 
+                              </a>
+                              {% comment %} <a class="email" href="mailto:{{coorientador.usuario.email}}">&lt;{{coorientador.usuario.email}}&gt;</a> {% endcomment %}
+                              {% if not forloop.last %}; {% endif %}
+                          {% endfor %}
+                        </div>
                       {% endif %}
                     {% endwith %}
                   </td>
