--- a/templates/base.html
+++ b/templates/base.html
@@ -95,9 +95,15 @@
   
   {% comment %} Para mensagens de erro ou avisos {% endcomment %}
   {% if mensagem_aviso %}
-    <div id="mensagem_aviso">{{ mensagem_aviso|safe|linebreaks }}</div>
+    <div id="mensagem_aviso">
+      {% lng mensagem_aviso.pt mensagem_aviso.en %}
+      {% comment %} {{ mensagem_aviso|safe|linebreaks }} {% endcomment %}
+    </div>
   {% elif mensagem_alerta_fade %}
-    <div id="mensagem_aviso">{{ mensagem_alerta_fade|safe|linebreaks }}</div>
+    <div id="mensagem_aviso">
+      {% lng mensagem_alerta_fade.pt mensagem_alerta_fade.en %}
+      {% comment %} {{ mensagem_alerta_fade|safe|linebreaks }} {% endcomment %}
+    </div>
     <script>setTimeout(function() {$("#mensagem_aviso").fadeOut("fast");}, 5000);</script>
   {% endif %}
 
