deixando sistema mais robusto

--- a/academica/templates/academica/includes/bloco_banca.html
+++ b/academica/templates/academica/includes/bloco_banca.html
@@ -21,7 +21,7 @@
     {% endfor %}
   </ul>
 {% else %}
-  <div class="text-danger">
-    {% lng "BANCA NÃO DEFINIDO" "EXAMINATION BOARD NOT DEFINED" %}
-  </div>
+  {% comment %} <div class="text-danger">
+    {% lng "BANCA NÃO DEFINIDA" "EXAMINATION BOARD NOT DEFINED" %}
+  </div> {% endcomment %}
 {% endif %}
