--- a/templates/dados_usuario.html
+++ b/templates/dados_usuario.html
@@ -39,7 +39,7 @@
   {% if user.celular %}
     <div style="margin-left: 8px;">&#x1F4F1;
       <a href="tel:{{user.celular}}">{{user.celular}}</a>
-      <a href="https://wa.me/{{user.celular|cut:' '}}"><img src="{% static 'images/whatsapp.svg' %}" alt="whatsapp" style="width:16px;height:16px;"></a>
+      <a class="unselectable" href="https://wa.me/{{user.celular|cut:' '}}"><img src="{% static 'images/whatsapp.svg' %}" alt="whatsapp" style="width:16px;height:16px;"></a>
     </div>
   {% endif %}
 
