--- a/estudantes/templates/estudantes/avaliacao_grupo.html
+++ b/estudantes/templates/estudantes/avaliacao_grupo.html
@@ -20,7 +20,12 @@
       line-height: 1.5;
       color: #333;
     }
+  </style>
 
+  <style>
+    table#disfuncoes td {
+      padding: 2px 5px;
+    }
   </style>
 
 {% endblock %}
@@ -33,7 +38,7 @@
 
   <form method="post">{% csrf_token %}
     
-    <table class="tabela-padrao table-striped table-hover">
+    <table class="tabela-padrao table-striped table-hover table-responsive">
       <thead>
         <tr>
           <th class="hide-on-narrow">#</th>
@@ -47,18 +52,78 @@
             <td class="hide-on-narrow" style="text-align:center">{{ forloop.counter }}</td>
             <td>{{ questao }}</td>
             <td>
-              <label><input type="radio" name="question_{{ forloop.counter }}" value="1"> Baixa</label><br>
-              <label><input type="radio" name="question_{{ forloop.counter }}" value="2"> Média</label><br>
-              <label><input type="radio" name="question_{{ forloop.counter }}" value="3"> Alta</label>
+              <label><input type="radio" name="question_{{ forloop.counter }}" value="1"> {% lng "Baixa" "Low" %}</label><br>
+              <label><input type="radio" name="question_{{ forloop.counter }}" value="2"> {% lng "Média" "Medium" %}</label><br>
+              <label><input type="radio" name="question_{{ forloop.counter }}" value="3"> {% lng "Alta" "High" %}</label>
             </td>
           </tr>
         {% endfor %}
       </tbody>
     </table>
+    <br><br>
 
-    <button class="btn btn-primary mb-1 mt-2" type="submit">
-      {% lng "Enviar" "Submit" %}
-    </button>
+    <h4>Disfunções da Equipe</h4>
+    <table id="disfuncoes" class="table-hover table-condensed table-responsive">
+      <tbody>
+        {% for disfuncao in disfuncoes %}
+          <tr id="r{{ forloop.counter0 }}">
+            <td>Disfunção {{ forloop.counter }} - {{ disfuncao }}</td>
+            <td><span id="d{{ forloop.counter0 }}" class="badge badge-secondary">0</span></td>
+            <td><span id="o{{ forloop.counter0 }}"></span></td>
+          </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+
+    <script>
+      function calc_grupo() {
+
+        var scores = [0, 0, 0, 0, 0];
+        var questionMap = {
+          4: 0, 6: 0, 12: 0,
+          1: 1, 7: 1, 10: 1,
+          3: 2, 8: 2, 13: 2,
+          2: 3, 11: 3, 14: 3,
+          5: 4, 9: 4, 15: 4
+        };
+
+        $("input[type=radio]:checked").each(function() {
+          var q = $(this).attr("name").split('_')[1];
+          var v = parseInt($(this).val(), 10);
+          if (questionMap.hasOwnProperty(q)) {
+            scores[questionMap[q]] += v;
+          }
+        });
+
+        for (var key = 0; key < scores.length; key++) {
+          $('#d' + key).text(scores[key]);
+          var message = "";
+          var color = "";
+          if (scores[key] > 2 && scores[key] < 6) {
+              message = "disfunção precisa ser trabalhada";
+              color = "#ffcccc";
+          } else if (scores[key] > 7) {
+              message = "disfunção provavelmente não é um problema em sua equipe";
+              color = "#ccffcc";
+          } else if (scores[key] > 5 && scores[key] < 8) {
+              message = "disfunção pode ser um problema";
+              color = "#ffffcc";
+          } else {
+              message = "";
+              color = "#ffffff";
+          }
+          $("#o" + key).text(message);
+          $("#r" + key).css("background-color", color);
+      }
+      
+      };
+
+      $(document).ready(function() {
+        $("input[type=radio]").change(calc_grupo);
+        calc_grupo();
+      });
+
+    </script>
 
   </form>
 
