--- a/templates/calendario_dinamicas.html
+++ b/templates/calendario_dinamicas.html
@@ -132,11 +132,10 @@
           {% for encontro in encontros %} 
             {
               title: ""
-                {% if encontro.facilitador %}+ `Facilitador: {{encontro.facilitador}}\n`{% endif %}
+                {% if encontro.facilitador %}+ `Facilitador{% if encontro.facilitador.genero == "F" %}a{% endif %}: {{encontro.facilitador}}\n`{% endif %}
                 {% if encontro.location %}+ `Local/Link: {{encontro.location}}\n`{% endif %}
                 {% if encontro.projeto %}
-                  + `Projeto: ({{encontro.projeto.organizacao.sigla}}) {{encontro.projeto.get_titulo}}` +
-                  `{% if encontro.facilitador %}\nFacilitador: {{encontro.facilitador}}{% endif %}` +
+                  + `Projeto: [{{encontro.projeto.organizacao.sigla}}] {{encontro.projeto.get_titulo}}` +
                   `{% if encontro.projeto.orientador %}\nOrientador: {{encontro.projeto.orientador}}{% endif %}`
                 {% endif %},
                 projeto: {% if encontro.projeto %}`{{encontro.projeto.get_titulo}}`{% else %}null{% endif %},
