--- a/estudantes/templates/estudantes/estudantes.html
+++ b/estudantes/templates/estudantes/estudantes.html
@@ -79,6 +79,7 @@
 </div>
 <br>
 
+
 <h5>
   {% lng "Entregas/Tarefas" "Deliverables/Tasks" %}
 </h5>
@@ -109,13 +110,6 @@
   </a>
 </div>
 
-<div class="item_lista"><span class="circulo">{% include "circulo_estados.html" with estado=encontros_marcar %}</span>
-  <a {% if not projeto and user.tipo_de_usuario == 1 %} class="disabled" onclick="showMessage('projeto')"
-          {% else %} href="{% url 'encontros_marcar' %}" {% endif %} >
-    {% lng "Agendar Mentorias" "Schedule Mentoring" %}
-  </a>
-</div>
-
 <div class="item_lista"><span class="circulo">{% include "circulo_estados.html" with estado=avaliacao_pares_intermediaria %}</span>
   <a {% if fora_fase_feedback_intermediario %} class="disabled" onclick="showMessage('feedback')" {% else %}
       {% if not projeto and user.tipo_de_usuario == 1%} class="disabled" onclick="showMessage('projeto')" {% else %}
@@ -131,12 +125,30 @@
         {% lng "Avaliação de Pares Final" "Final Peer Evaluation" %}
   </a>
 </div>
+<br>
+
+
+<h5>
+  {% lng "Suporte a Grupos" "Group Support" %}
+</h5>
+<div class="item_lista"><span class="circulo">{% include "circulo_estados.html" with estado=encontros_marcar %}</span>
+  <a {% if not projeto and user.tipo_de_usuario == 1 %} class="disabled" onclick="showMessage('projeto')"
+          {% else %} href="{% url 'encontros_marcar' %}" {% endif %} >
+    {% lng "Agendar Mentorias" "Schedule Mentoring" %}
+  </a>
+</div>
 <div class="item_lista"><span class="circulo">&#9899;</span>
   <a href="{% url 'estilo_comunicacao' %}">
     {% lng "Estilos de Comunicação" "Communication Styles" %}
   </a>
 </div>
+<div class="item_lista"><span class="circulo">&#9899;</span>
+  <a href="{% url 'avaliacao_grupo' %}">
+    {% lng "Funcionalidade de Grupo" "Group Functionality" %}
+  </a>
+</div>
 <br>
+
 
 <h5>
   {% lng "Pós-projeto" "Post-project" %}
