ajuste do plano de aula

--- a/operacional/templates/operacional/plano_aulas.html
+++ b/operacional/templates/operacional/plano_aulas.html
@@ -100,7 +100,7 @@
     <br>
   
     <b>Orientações gerais:</b><br>
-    <span>Para a Aprovação o estudante deve ter uma média individual maior ou igual a 5, e deve ter no mínimo conceito C em todos os objetivos de aprendizado da avaliação final.</span>
+    <span>Para a aprovação o estudante deve ter uma média geral e individual maior ou igual a 5, e deve ter no mínimo conceito C (5.0) em todos os objetivos de aprendizado das avaliações finais.</span>
 
   </div>
 
