codigo conduta mais isolado

--- a/estudantes/templates/estudantes/codigo_conduta.html
+++ b/estudantes/templates/estudantes/codigo_conduta.html
@@ -38,14 +38,14 @@
 
   <form method="post">{% csrf_token %}
 
-    {% for group, perguntas in codigo_conduta.items %}
+    {% for group, perguntas in perguntas_codigo_conduta.items %}
       <div class="card mb-3">
         <div class="card-header">{{ forloop.counter }} - {{ group }}</div>
         <div class="card-body">
           {% for id, p in perguntas.items %}
             <div class="form-group">
               <label for="{{ id }}">{{ p }}</label>
-              <textarea class="form-control" id="{{ id }}" name="{{ id }}" rows="3">{% with r=respostas|get_value:id %}{% if r %}{{ r }}{% endif %} {% endwith %}</textarea>
+              <textarea class="form-control" id="{{ id }}" name="{{ id }}" rows="3">{% with r=respostas|get_value:id %}{% if r %}{{ r }}{% endif %}{% endwith %}</textarea>
             </div>
           {% endfor %}
         </div>
