--- a/estudantes/templates/estudantes/estudantes.html
+++ b/estudantes/templates/estudantes/estudantes.html
@@ -128,7 +128,12 @@
 </div>
 <div class="item_lista"><span class="circulo">&#9899;</span>
   <a href="{% url 'codigo_conduta' %}">
-    {% lng "Código de Conduta" "Code of Conduct" %}
+    {% lng "Código de Conduta Individual" "Individual Code of Conduct" %}
+  </a>
+</div>
+<div class="item_lista"><span class="circulo">&#9899;</span>
+  <a href="{% url 'codigo_conduta_projeto' %}">
+    {% lng "Código de Conduta do Grupo" "Group Code of Conduct" %}
   </a>
 </div>
 <div class="item_lista"><span class="circulo">&#9899;</span>
