--- a/estudantes/templates/estudantes/funcionalidade_grupo.html
+++ b/estudantes/templates/estudantes/funcionalidade_grupo.html
@@ -7,7 +7,7 @@
 
 {% block head %}
   {% load linguas %}
-  {% load get_field %}
+  
   <style>
     .explanatory-text {
       max-width: 1050px;
@@ -23,128 +23,16 @@
     }
   </style>
 
-  <style>
-    table#disfuncoes td {
-      padding: 2px 5px;
-    }
-  </style>
-
 {% endblock %}
 
 {% block content %}
 
-  {% if texto_estilo %}
+  {% if questoes_funcionalidade.texto_estilo %}
     <div class="explanatory-text">
-      {% lng texto_estilo.pt texto_estilo.en %}
+      {% lng questoes_funcionalidade.texto_estilo.pt questoes_funcionalidade.texto_estilo.en %}
     </div>
   {% endif %}
 
-  <form method="post">{% csrf_token %}
-
-    <table class="tabela-padrao table-striped table-hover table-responsive">
-      <thead>
-        <tr>
-          <th class="hide-on-narrow">#</th>
-          <th>{% lng "Questão" "Question" %}</th>
-          <th>{% lng "Frequência" "Frequency" %}</th>
-        </tr>
-      </thead>
-      <tbody>
-        {% for questao in questoes %}
-          <tr>
-            <td class="hide-on-narrow" style="text-align:center">{{ forloop.counter }}</td>
-            <td>{{ questao }}</td>
-            <td>
-              {% with question_key="question_"|concat:forloop.counter|stringformat:"s" %}
-                {% with f=funcionalidade_grupo|get_attr:question_key %}
-                  <label><input type="radio" name="question_{{ forloop.counter }}" value="1" {% if f == 1 %}checked{% endif %}> {% lng "Baixa" "Low" %}</label><br>
-                  <label><input type="radio" name="question_{{ forloop.counter }}" value="2" {% if f == 2 %}checked{% endif %}> {% lng "Média" "Medium" %}</label><br>
-                  <label><input type="radio" name="question_{{ forloop.counter }}" value="3" {% if f == 3 %}checked{% endif %}> {% lng "Alta" "High" %}</label>
-                {% endwith %}
-              {% endwith %}
-            </td>
-          </tr>
-        {% endfor %}
-      </tbody>
-    </table>
-    <br><br>
-
-    <h4>Disfunções da Equipe</h4>
-    <table id="disfuncoes" class="table-hover table-condensed table-responsive">
-      <tbody>
-        {% for disfuncao in disfuncoes %}
-          <tr id="r{{ forloop.counter0 }}">
-            <td>Disfunção {{ forloop.counter }} - {{ disfuncao }}</td>
-            <td><span id="d{{ forloop.counter0 }}" class="badge badge-secondary">0</span></td>
-            <td><span id="o{{ forloop.counter0 }}"></span></td>
-          </tr>
-        {% endfor %}
-      </tbody>
-    </table>
-
-    <script>
-      function calc_grupo() {
-
-        var scores = [0, 0, 0, 0, 0];
-        var questionMap = {
-          4: 0, 6: 0, 12: 0,
-          1: 1, 7: 1, 10: 1,
-          3: 2, 8: 2, 13: 2,
-          2: 3, 11: 3, 14: 3,
-          5: 4, 9: 4, 15: 4
-        };
-
-        $("input[type=radio]:checked").each(function() {
-          var q = $(this).attr("name").split('_')[1];
-          var v = parseInt($(this).val(), 10);
-          if (questionMap.hasOwnProperty(q)) {
-            scores[questionMap[q]] += v;
-          }
-        });
-
-        for (var key = 0; key < scores.length; key++) {
-          $('#d' + key).text(scores[key]);
-          var message = "";
-          var color = "";
-          if (scores[key] > 2 && scores[key] < 6) {
-              message = "disfunção precisa ser trabalhada";
-              color = "#ffcccc";
-          } else if (scores[key] > 7) {
-              message = "disfunção provavelmente não é um problema em sua equipe";
-              color = "#ccffcc";
-          } else if (scores[key] > 5 && scores[key] < 8) {
-              message = "disfunção pode ser um problema";
-              color = "#ffffcc";
-          } else {
-              message = "";
-              color = "#ffffff";
-          }
-          $("#o" + key).text(message);
-          $("#r" + key).css("background-color", color);
-      }
-      
-      };
-
-      $(document).ready(function() {
-        $("input[type=radio]").change(function() {
-          $.ajax({
-            data: {
-              "csrfmiddlewaretoken": "{{ csrf_token }}",
-              "questao": $(this).attr("name"),
-              "valor": $(this).val()
-            },
-            dataType: "JSON",
-            type: "POST",
-            success: function(data) {},
-            {% include "ajax_error_function.js" %}
-          });
-          calc_grupo();
-        });
-        calc_grupo();
-      });
-
-    </script>
-
-  </form>
+  {% include "estudantes/includes/perguntas_funcionalidade.html" %}
 
 {% endblock %}
