--- a/users/templates/users/estudante_detail.html
+++ b/users/templates/users/estudante_detail.html
@@ -223,36 +223,11 @@
     {% endif %} 
 
   {% endif %} 
+  
+  <hr>
 
-
-  {% if estilos_respostas %}
-    <br><hr>
-    <h4>
-      {% lng "Estilos de Comunicação" "Communication Styles" %}
-      <span id="estilo_com" class="seta-baixo"></span>
-    </h4>
-    <div id="bloco_estilo" style="display: none;">
-      {% include "tabela_estilos.html" with usuario=aluno.user %}<br>
-      <b>{% lng "Resultados" "Results" %}:</b><br>
-      <table>
-        <tbody>
-          <tr><td>
-          {% for metrica, valor in estilos_respostas.items %}
-            <b>{{ metrica }}:</b> {{ valor }}<br>
-            {% if forloop.counter|divisibleby:2 %}</td></tr>
-              {% if not forloop.last %}<tr><td>{% endif %}
-            {% endif %}
-          {% endfor %}
-        </tbody>
-      </table>
-    </div>
-    <script>
-      $("#estilo_com").on("click", function() {
-        $("#bloco_estilo").toggle(200);
-        $(this).toggleClass("seta-baixo seta-cima");
-      });
-    </script>
-  {% endif %}
+  {% include "estudantes/includes/estilos_respostas.html" %}
+  {% include "estudantes/includes/funcionalidade_respostas.html" %}
 
   {% if user.admin %}
     <a href="{% url 'edita_usuario' aluno.user.id %}">
