--- a/estudantes/templates/estudantes/includes/funcionalidade_respostas.html
+++ b/estudantes/templates/estudantes/includes/funcionalidade_respostas.html
@@ -1,7 +1,7 @@
 {% comment %}
   Desenvolvido para o Projeto Final de Engenharia
   Autor: Luciano Pereira Soares <lpsoares@insper.edu.br>
-  Data: 17 de Janeiro de 2025
+  Data: 5 de Fevereiro de 2025
 {% endcomment %}
 
 {% load static %}
