--- a/estudantes/templates/estudantes/includes/funcionalidade_respostas.html
+++ b/estudantes/templates/estudantes/includes/funcionalidade_respostas.html
@@ -14,7 +14,7 @@
   </h4>
 
   <div id="bloco_funcionalidade" style="display: none;">
-    {% include "estudantes/includes/perguntas_funcionalidade.html" with usuario=aluno.user %}<br>
+    {% include "estudantes/includes/perguntas_funcionalidade.html" with ver=True %}<br>
   </div>
   <script>
     $("#funcionalidade_com").on("click", function() {
