--- a/estudantes/templates/estudantes/includes/tabela_conduta.html
+++ b/estudantes/templates/estudantes/includes/tabela_conduta.html
@@ -12,12 +12,16 @@
 
   {% for group, perguntas in perguntas_codigo_conduta.items %}
     <div class="card mb-3">
-      <div class="card-header">{{ forloop.counter }} - {{ group }}</div>
+      <div class="card-header"><b>{{ forloop.counter }} - {{ group }}</b></div>
       <div class="card-body">
         {% for id, p in perguntas.items %}
           <div class="form-group">
-            <label for="{{ id }}">{{ p }}</label>
-            <textarea class="form-control" id="{{ id }}" name="{{ id }}" rows="3">{% with r=respostas_conduta|get_value:id %}{% if r %}{{ r }}{% endif %}{% endwith %}</textarea>
+            <label for="{{ id }}"><b>{{ p }}</b></label>
+            {% if ver %}
+              {{ respostas_conduta|get_value:id|linebreaks }}
+            {% else %}
+              <textarea class="form-control" id="{{ id }}" name="{{ id }}" rows="3">{% with r=respostas_conduta|get_value:id %}{% if r %}{{ r }}{% endif %}{% endwith %}</textarea>
+            {% endif %}
           </div>
         {% endfor %}
       </div>
