--- a/projetos/templates/projetos/projeto_completo.html
+++ b/projetos/templates/projetos/projeto_completo.html
@@ -15,6 +15,7 @@
   
   <link rel="stylesheet" href="{% static 'css/caixa_rolante.css' %}">
   <link rel="stylesheet" href="{% static 'css/mostra_horarios.css' %}">
+  <link rel="stylesheet" href="{% static 'css/tab_arrend.css' %}"> {% comment %} SETAS {% endcomment %}
   <script src="{% static 'js/Chart.min.js' %}"></script>
 
   {% include "reload.html" %}  {% comment %} Atualiza as conexões quando se da um back {% endcomment %}
@@ -462,6 +463,10 @@
       <h4>{% lng "Alocação Semanal dos Estudantes" "Weekly Allocation of Students" %}:</h4>
       {% include "mostra_horarios.html" %}
     {% endif %}
+  {% endif %}
+
+  {% if user.prof_a %}
+    {% include "estudantes/includes/conduta_respostas.html" %}
   {% endif %}
 
   {% if user.prof_a %}
